--- a/src/tdc/QABundle/Resources/views/Default/index.html.twig
+++ b/src/tdc/QABundle/Resources/views/Default/index.html.twig
@@ -29,8 +29,7 @@
 
 {% block sidebar %}
 {% include 'tdcQABundle:Default:sidebar.html.twig' with 
-    { 'tags': tags,
-       'mode':'index'} 
+    { 'mode':'index'} 
 %}
 {% endblock sidebar %}
 
