--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -1,5 +1,6 @@
-{% extends "FOSUserBundle::layout.html.twig" %}
+{#% extends "FOSUserBundle::layout.html.twig" %#}
+{% extends 'FOSUserBundle:Profile:layout.html.twig' %}
 
-{% block fos_user_content %}
-{% include "FOSUserBundle:Profile:show_content.html.twig" %}
-{% endblock fos_user_content %}
+{% block body %}
+<h1>Welcome back {{ user.username }}!</h1>
+{% endblock body %}
