--- a/src/tdc/FrontEndBundle/Resources/views/Default/layout.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/layout.html.twig
@@ -17,7 +17,7 @@
         </div>
     {% else %}
         Welcome <strong>{{ app.user ? app.user.username : 'Anonymous' }}</strong> | 
-        <a href="{{ path('tdc_logedin_home') }}">Profile</a> | 
+        <a href="{{ path('fos_user_profile_show') }}">Profile</a> | 
         <a href="{{ path('fos_user_security_logout') }}">Logout</a>
     {% endif %}
 {% endblock loginBar %}
