removed tdc_logedin_home

--- a/src/tdc/FrontEndBundle/Resources/views/Default/layout.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/layout.html.twig
@@ -7,7 +7,7 @@
             <input id="username" name="_username" ></input>
             <label>pass</label>
             <input type="password" id="password" name="_password"></input>
-             <input type="hidden" name="_target_path" value="tdc_logedin_home" />
+             <input type="hidden" name="_target_path" value="fos_user_profile_show" />
             <input type="submit" class="tdcButton blueBtnGradient" id="_submit" name="_submit" value="login" />
             <a id="loginHelpBtn" class="grayGradient02 blueHoverGradient">?</a>
         </form>
