--- a/src/tdc/QABundle/Resources/views/Default/layout.html.twig
+++ b/src/tdc/QABundle/Resources/views/Default/layout.html.twig
@@ -49,5 +49,43 @@
    $(document).ready(function(){
        SyntaxHighlighter.all();
    });
+
+    $('#form_text').tinymce({
+            // Location of TinyMCE script
+            script_url : '{{path("tdc_front_homepage")}}../bundles/tdcqa/js/tinymce/jscripts/tiny_mce/tiny_mce.js',
+
+            // General options
+            theme : "advanced",
+            plugins : "preelementfix",
+
+            // Theme options
+            //theme_advanced_buttons1 : "bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect",
+            //theme_advanced_buttons2 : "styleselect,formatselect,fontselect,fontsizeselect",
+            //theme_advanced_buttons2 : "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor",
+            //theme_advanced_buttons3 : "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen",
+            //theme_advanced_buttons4 : "insertlayer,moveforward,movebackward,absolute,|,styleprops,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,pagebreak",
+            theme_advanced_toolbar_location : "top",
+            theme_advanced_toolbar_align : "left",
+            theme_advanced_statusbar_location : "bottom",
+            theme_advanced_resizing : false,
+
+            remove_linebreaks : false,
+            theme_advanced_blockformats : "p,h1,h2,h3,blockquote,pre",
+
+            // Style formats
+            style_formats : [
+            {title : 'Python', block:'pre',classes:'brush:python' },
+            {title : 'C/C++', block:'pre', classes:'brush:cpp' },
+            {title : 'RSL', block:'pre',classes:'brush:c' },
+            ],
+            // Example content CSS (should be your site CSS)
+            //content_css : "css/content.css",
+
+            // Drop lists for link/image/media/template dialogs
+            template_external_list_url : "lists/template_list.js",
+           external_link_list_url : "lists/link_list.js",
+           external_image_list_url : "lists/image_list.js",
+           media_external_list_url : "lists/media_list.js",
+    });
    </script>
 {% endblock javascripts %}
