--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -2,5 +2,41 @@
 {% extends 'FOSUserBundle:Profile:layout.html.twig' %}
 
 {% block body %}
-<h1>Welcome back {{ user.username }}!</h1>
+<h1>Welcome back
+    {% if user.name %}
+        {{user.name|capitalize}}
+    {% else %}
+        {{ user.username }}
+    {% endif %}        
+</h1>
+<h2>Subscription</h2>
+{% if user.subscription %}
+{% else %}
+You have no current subscriptions. Go to the <a href="{{path("tdc_user_subscribe")}}"> subscription page </a> if you would like access t our video library.
+{% endif %}
+
+{% if questions|length > 0 %}
+<h2> Your Questions </h2>
+    {% set row = 0 %}
+    {% for question in questions %}
+        <p><a href="{{path("tdc_qa_view",{'id':question.id})}}" >
+          {{question.title}}</a></br>
+            Views: <i>{{question.views}}</i>
+        </p>
+        {% set row = 1 - row %}
+    {% endfor %}
+{% endif %}
+
+{% if answers|length > 0 %}
+<h2> Your Answers </h2>
+    {% set row = 0 %}
+    {% for answer in answers %}
+        <p><a href="{{path("tdc_qa_view",{'id':answer.question.id})}}" >
+          {{answer.title}}</a></br>
+            Views: <i>{{answer.question.views}}</i>
+        </p>
+        {% set row = 1 - row %}
+    {% endfor %}
+{% endif %}
+
 {% endblock body %}
