Got IPN to work

--- a/app/Resources/FOSUserBundle/views/Profile/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/layout.html.twig
@@ -16,10 +16,8 @@
     <div id="userNavBar" class="grayGradient04" >
         <ul>
             <li linkto="{{path("fos_user_profile_edit")}}">Edit Account</li>
-            <!-- li>Activity</li>
-            <li>Play Lists</li>
-            <li>Notes</li -->
             <li linkto="{{path("tdc_front_catalog_list")}}">Browse</li>
+            <li linkto="{{path("tdc_player_home")}}">Launch Player</li>
         </ul>
     </div>
     <div id="userContent">
