--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -10,12 +10,8 @@
     {% endstylesheets %}
 {% endblock %}
 
-{% block loginBar %}
-    {% if app.user != "" %}
-        logged in as <strong>{{ app.user ? app.user.username : 'Anonymous' }}</strong> - 
-        <a href="{{ path('fos_user_security_logout') }}">Logout</a>
-    {% endif %}
-{% endblock loginBar %}
+{% block titleName %}Welcome{% endblock %}
+
 
 {% block contentArea %}
 <center>
