--- a/web/public/css/logedIn.css
+++ b/web/public/css/logedIn.css
@@ -5,6 +5,7 @@
 #userNavBar {
     width:200px;
     margin: 0px;
+    margin-right: 15px;
     float:left;
     color: rgb(38,38,38);
     font-size: 1.2em;
@@ -55,7 +56,6 @@
 
 }
 #userContent {
-    float:left;
     border-left:1px solid rgb(50,50,50);
     padding: 10px;
 }
