--- a/src/tdc/UserBundle/Resources/views/Default/subscribe.html.twig
+++ b/src/tdc/UserBundle/Resources/views/Default/subscribe.html.twig
@@ -15,23 +15,21 @@
 {% block contentArea %}
 <div id="contentHolder" >
     <h1>
-    
-    {% if app.user != "" and user.subscription|length == 0  %}
-        Subscribe
+    {% if app.session.hasFlash('expiredSubscription') %}
+        {{ app.session.flash('expiredSubscription') }}
     {% else %}
-        Your active subscription
+        Subscribe
     {% endif %}
     </h1>
 
     {% block body %}
-        {% if app.user != "" and user.subscription|length == 0 %}
-               <p>We are glad you have decided to join our community of learners. Please select the subscription method that best fits your needs. If you have any questions about our service please visit the <a href="{{path("tdc_front_faq")}}">F.A.Q.</a>, specially the <a href="{{path("tdc_front_faq")}}#payments">payments</a> section</p>
-        {% endif %}
+        {% if app.user != "" %}
+            {% if app.session.hasFlash('expiredSubscription') %}
+                <p>Our records indicate that your previous subscription has expired. We are glad to know that you would like to regain access to our library. Please follow the links below to start a new subscription</p> 
+            {% else %}
+            <p>We are glad you have decided to join our community of learners. Please select the subscription method that best fits your needs. If you have any questions about our service please visit the <a href="{{path("tdc_front_faq")}}">F.A.Q.</a>, specially the <a href="{{path("tdc_front_faq")}}#payments">payments</a> section</p>
+            {% endif %}
 
-        {% if app.user == "" %}
-            <p> Before you can subscribe you need to <a href="{{path("fos_user_registration_register")}}">register</a>. Its free!</p>
-        {% else %}
-            {% if user.subscription|length == 0 %}
                 <center>
                 <table id="subscribe">
                 <tr>
@@ -42,7 +40,7 @@
                         <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         
-                        <input type="hidden" name="custom" value="{{user.id}}">
+                        <input type="hidden" name="custom" value="{{app.user.id}}">
                         <input type="hidden" name="return" value="{{completeUrl}}">
                         <input type="hidden" name="notify_url" value="{{notifyUrl}}">
                         <input type="hidden" name="cancel_return" value="{{cancelUrl}}">
@@ -58,7 +56,7 @@
                         <input type="image" src="https://www.sandbox.paypal.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.sandbox.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1">
 
-                        <input type="hidden" name="custom" value="{{user.id}}">
+                        <input type="hidden" name="custom" value="{{app.user.id}}">
                         <input type="hidden" name="return" value="{{completeUrl}}">
                         <input type="hidden" name="notify_url" value="{{notifyUrl}}">
                         <input type="hidden" name="cancel_return" value="{{cancelUrl}}">
@@ -91,28 +89,10 @@
                 </tr>
                 </table>
                 </center>
-            {% else %}
-                <center>
-                <table>
-                <tr><td>Created:</td><td>{{ user.subscription.created|date }}</td></tr>
-                <tr><td>Expires:</td><td>{{ user.subscription.expires|date }}</td></tr>
-                <tr><td>Cycle:</td>
-                    <td>
-                    {% if user.subscription.duration == 1 %}
-                        Montly
-                    {% elseif user.subscription.duration == 3 %}
-                        3 Months
-                    {% elseif user.subscription.duration == 6 %}
-                        6 Months
-                    {% else %}
-                        Yearly
-                    {% endif %}
-                    </td>
-                </tr>
-                </table>
-                </center>
-            {% endif %}
+        {% else %}
+            <p> Before you can subscribe you need to <a href="{{path("fos_user_registration_register")}}">register</a>. Its free!</p>
         {% endif %}
+
     {% endblock body %}
 </div>
 {% endblock contentArea %}
