Began implementation of a very simple template selecting scheme.

--- a/src/tdc/FrontEndBundle/Resources/views/Default/index.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
         <h2><a href="{{ path('tdc_front_faq')}}">F.A.Q.</a></h2>
     </div>
     <div id="contentArea">
-    {% block body %}{{os}}{% endblock %}
+    {% block body %}{% endblock %}
     </div>
     <div id="lowerContent" class="grayGradient07">
         <div id="quoteBlurb" class="lowerContentBlurb">
