--- a/src/tdc/AdminBundle/Resources/views/layout.html.twig
+++ b/src/tdc/AdminBundle/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
 {% block contentArea %}
     <div id="adminNavBar">
         <ul>
-            <li>Videos</li>
+            <li linkto="{{path("tdc_admin_videos")}}" >Videos</li>
             <li>Categories</li>
             <li>Users</li>
         </ul>
@@ -35,6 +35,14 @@
             adminContent.height(contentArea.height() - 20);
             adminContent.width(contentArea.width() - navBar.width() - 22);
             navLinks.first().css("border-top-width","0px");
+        });
+
+        $('#adminNavBar ul li').click(function(event){
+            var self = $(this);
+            var link = self.attr("linkto")
+            if (link) {
+                window.location = link;
+            }
         });
     </script>
 {% endblock %}
