--- a/src/tdc/FrontEndBundle/Resources/views/Default/faq.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/faq.html.twig
@@ -1,13 +1,27 @@
 {% extends 'tdcFrontEndBundle:Default:index.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    {% stylesheets  
+     debug=true
+    'public/css/TDC1/faq.css' 
+    %}
+    <link href="{{ asset_url }}" rel="stylesheet" media="screen" />
+    {% endstylesheets %}
+{% endblock %}
+
 {% block titleName %}FAQ{% endblock %}
 
 {% block contentArea %}
-    <div id="contentHolder" >
-    {% block body %}
-        <h1>FAQ</h1>
-        
-        <h2><a name="about"/>About TD Channel</a></h2>
+    <h1>FAQ</h1>
+    <div id="faqIndex_hldr"> 
+    <h3>Topics</h3>
+    <li><a name="about"/>About TD Channel</a></li>
+    <li><a name="about"/>About Videos</a></li>
+    <li><a name="payments"/>About Payments</a></li>
+    </div>
+
+    <div id="faqContent_hldr">
         <li class="question">What is TD Channel?</li>
         <p>TD Channel is an online  learning resource designed to provide high quality educational content with strong enphasis on concepts instead of "recipes".</p>
         
@@ -15,7 +29,6 @@
         <p>TD Channel is a subscription service. For a very small fee, subscribed users can access the entire TD Channel library, as well as access to our Q&A system and our topic request form.</p>
         <p>The video library is available 24/7/365 and can be accessed from any computer with internet access.</p>
 
-        <h2><a name="about"/>About Videos</a></h2>
         <li class="question">How are the videos delivered?</li>
         <p>All TD Channel videos are delivered through on our streamming netwok that is scattered through several locations around the world</p>
 
@@ -25,7 +38,6 @@
         <li class="question">Are any mobile devices supported?</li>
         <p>At this moment we only support streamming to computers. We do have plans to support the most popular mobile devices in the future, so stay tuned.</p>
 
-        <h2><a name="payments"/>About Payments</a></h2>
         <li class="question">What are my payment options?</li>
         <p>All TD Channel payments are handled through a <a href="http://paypal.com" target="_blank">Paypal</a> subscription service. We ofer monthly, 3 months, 6 months and yearly subscriptions.
         <li class="question">Can I cancel any time?</li>
@@ -34,6 +46,5 @@
         <p>If for some reason you are not satisfied with out service, you can request a refund. Refunds will be calculated the following way:</p>
         <p>(cost of subscription / subscription length) * remainder of subscription.</p>
         <p>For example: User signs up for a 12 month subscription, but 3 months into the year decides to cancel it. If the subscription cost a total of 100 USD, the refund would be</br></br><center>100 (cost) / 12 (months) = 8.33 (cost per month) * 9 (remaining months) = 74.97 refund</center> </p>
-    {% endblock %}
     </div>
 {% endblock contentArea %}
